[tool.poetry]
name = "bastet"
version = "0.1.0"
description = ""
authors = ["Michail Strukalin <saintklovus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.17.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
